--- a/src/app/landing-page/sign-up/sign-up.component.html
+++ b/src/app/landing-page/sign-up/sign-up.component.html
@@ -2,7 +2,7 @@
   <div class="signup-container">
     <div class="container-child signup-thumbnail">
       <div class="thumbnail-logo">
-        <h1 class="logo-text">Movie Star</h1>
+        <h1 class="logo-text">Welcome to Movie Star</h1>
       </div>
       <div class="thumbnail-content text-center">
         <h1 class="heading-primary" *ngIf="name?.value === ''">Movie Star</h1>
