--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -83,7 +83,7 @@
       <p>Yo brother,</p>
       <p>You got lost in the <strong>404</strong> page.</p>
       <p>
-        <button>Get back to home</button>
+        <button routerLink='/welcome'>Get back to home</button>
       </p>
     </article>
   </main>
