--- a/src/app/landing-page/sign-up/sign-up.component.scss
+++ b/src/app/landing-page/sign-up/sign-up.component.scss
@@ -72,6 +72,7 @@ a,
     font-size     : .8rem;
     font-weight   : 700;
     vertical-align: bottom;
+    text-align    : center;
 }
 
 .thumbnail-content {
